# Telco-Churn-Prediction

./: LICENSE  README.md  app.py  main.py  pyproject.toml  telco_churn_pipeline.pkl  train_model.ipynb
.github/workflows/: ci.yml
