[project]
name = "telco-churn-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.3",
    "joblib-stubs>=1.5.3.1.20260117",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "pandas-stubs>=3.0.0.260204",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "streamlit>=1.55.0",
]
